--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "projeto13-batepapo-uol-api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node ./src/app.js",
