--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ./src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/app.js"
   },
   "repository": {
@@ -14,7 +14,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "  ",
   "bugs": {
     "url": "https://github.com/Marcio-VOT/projeto13-batepapo-uol-api/issues"
   },
