--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
   },
   "homepage": "https://github.com/Marcio-VOT/projeto13-batepapo-uol-api#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
-    "mongodb": "^4.13.0",
-    "uuid": "^9.0.0"
+    "mongodb": "^4.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
